# IoTGuard

./: .gitignore  CMakeLists.txt  main.cpp
configs/: config.json  juniper_url.json
src/: AnomalyDetector.cpp  AnomalyDetector.h  DataCollector.cpp  DataCollector.h  DataParser.cpp  DataParser.h  EventLogger.cpp  EventLogger.h  MonitoringTask.cpp  MonitoringTask.h  NotificationSystem.cpp  NotificationSystem.h  ObserverManager.cpp  ObserverManager.h  StateComparator.cpp  StateComparator.h  Stuff.h
